correction in moto

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
 title: Homemade code
-description: Mind is free to roam when code is made at home
+description: Mind is free to roam when code is being made at home
 google_analytics: G-3WFG78WYL1
