added home page with the latest post

--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ theme: jekyll-theme-cayman
 title: Homemade code
 description: Mind is free to roam when code is being made at home
 google_analytics: G-3WFG78WYL1
+excerpt_separator: <!--more-->
