--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,4 @@ title: Homemade code
 description: Mind is free to roam when code is being made at home
 google_analytics: G-3WFG78WYL1
 excerpt_separator: <!--more-->
+paginate: 5
