--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,4 @@ description: Mind is free to roam when code is being made at home
 google_analytics: G-3WFG78WYL1
 excerpt_separator: <!--more-->
 paginate: 5
+paginate_path: "/blog/page:num/"
