made the top navigation a bit clearer

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
-- name: [Home]
+- name: Home
   link: /index.html
-- name: [Posts]
+- name: Posts
   link: /blog/index.html
-- name: [About]
+- name: About
   link: /about.html
-- name: [Disclaimer]
+- name: Disclaimer
   link: /disclaimer.html
