--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-cayman
 title: Homemade code
-description: Mind is free to roam when code is being made at home
+description: If it is not keeping you up at night, then it is not a real problem
 google_analytics: G-3WFG78WYL1
 excerpt_separator: <!--more-->
 paginate: 5
